game page updated

--- a/mobile-app-development.html
+++ b/mobile-app-development.html
@@ -505,29 +505,29 @@
                         <div class="pf-item set-bg fashion large-height" data-setbg="images/home/pf-4.jpg" style="background-image: url(&quot;images/home/pf-4.jpg&quot;); position: absolute; left: 0%; top: 0px;">
                             <a href="images/home/pf-4.jpg" class="pf-icon image-popup"><span class="icon_plus"></span></a>
                             <div class="pf-text">
-                                <h4>COLORS SPEAK</h4>
-                                <span>Fashion</span>
+                                <h4>Android App Development</h4>
+                                <span>Make the most out of the open-source free mobile operating system – Android. Get yourself a highly scalable android app that works across different platforms such as tablets, windows, TVs, etc. with our solid android app solutions.</span>
                             </div>
                         </div>
                         <div class="pf-item large-width large-height set-bg lifestyle" data-setbg="images/home/pf-2.jpg" style="background-image: url(&quot;images/home/pf-2.jpg&quot;); position: absolute; left: 19.9398%; top: 0px;">
                             <a href="images/home/pf-2.jpg" class="pf-icon image-popup"><span class="icon_plus"></span></a>
                             <div class="pf-text">
-                                <h4>COLORS SPEAK</h4>
-                                <span>Fashion</span>
+                                <h4>iOS App Development</h4>
+                                <span>With a prodigious experience playing around with Apple and its operating system – iOS – we have mastered the state-of-artwork of iOS app development to create functional, feature-rich, consumer-centric, and user-friendly iOS apps.</span>
                             </div>
                         </div>
                         <div class="pf-item large-width set-bg natural" data-setbg="images/home/pf-3.jpg" style="background-image: url(&quot;images/home/pf-3.jpg&quot;); position: absolute; left: 59.9699%; top: 0px;">
                             <a href="images/home/pf-3.jpg" class="pf-icon image-popup"><span class="icon_plus"></span></a>
                             <div class="pf-text">
-                                <h4>COLORS SPEAK</h4>
-                                <span>Fashion</span>
+                                <h4>Web App Development</h4>
+                                <span>Online presence is indispensable for a business to thrive in this digital age of the world. Future Reality helps you with web app development to create a prominent web presence for greater traffic, leads, and sales.</span>
                             </div>
                         </div>
-						<div class="pf-item large-width set-bg natural service-img-4" data-setbg="images/home/pf-3.jpg" style="background-image: url(&quot;images/home/pf-3.jpg&quot;); position: absolute; left: 59.9699%; top: 0px !important;">
+						<div class="pf-item large-width set-bg natural mobile-service-img-4" data-setbg="images/home/pf-3.jpg" style="background-image: url(&quot;images/home/pf-3.jpg&quot;); position: absolute; left: 59.9699%; top: 0px !important;">
                             <a href="images/home/pf-3.jpg" class="pf-icon image-popup"><span class="icon_plus"></span></a>
                             <div class="pf-text">
-                                <h4>COLORS SPEAK</h4>
-                                <span>Fashion</span>
+                                <h4>Cross-Platform Mobile App Development</h4>
+                                <span>A native mobile app solely for a single platform is more costly than an app coded to operate relentlessly on all the platforms. Cross-platform app development helps you reach consumers on all platforms – operating system was never a problem.</span>
                             </div>
                         </div>
                     </div>
@@ -540,63 +540,6 @@
 		</div>
 	</section>
 	<!--End Service-->
-
-    <!-- Start Services -->
-    <section class="services py-3 py-md-3 py-lg-5" id="services">
-		<div class="container">
-			<div class="row">
-				<div class="col-lg-12 wow fadeInLeft" style="visibility: visible; animation-name: fadeInLeft;">
-					<div class="common-heading text-l">
-						<h2 class="common-heading">All-in-One Mobile App Development Services</h2>
-						<p class="mt10 text-center">Future Reality is an inclusive mobile app development company, having everything that takes to boost a business. Our vision is to offer brands with every mobile app solution that reinforces their branding with more visibility, accessibility, and of course build loyalty among the targeted audience. Reach consumers on every device regardless of the platform, operating system, and screen size with our robust mobile app development services.</p>
-						<p class="text-center"><a href="#"><u>Request for proposal</u></a></p>
-					</div>
-				</div>
-            </div>
-			<div class="row mt-5 mt-md-3">
-                <div class="grid">
-                    <div class="grid-sizer"></div>
-                    <div class="grid-item box">
-                        <img src="images/services/andoid-app-img.png" alt="Android App Development"/>
-                        <div class="overlay">
-                            <div class="text">
-                                <h5>Android App Development</h5>
-                                <p>Make the most out of the open-source free mobile operating system – Android. Get yourself a highly scalable android app that works across different platforms such as tablets, windows, TVs, etc. with our solid android app solutions.</p>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="grid-item box">
-                        <img src="images/services/andoid-app-img.png" alt="iOS App Development"/>
-                        <div class="overlay">
-                            <div class="text">
-                                <h5>iOS App Development</h5>
-                                <p>With a prodigious experience playing around with Apple and its operating system – iOS – we have mastered the state-of-artwork of iOS app development to create functional, feature-rich, consumer-centric, and user-friendly iOS apps.</p>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="grid-item box">
-                        <img src="images/services/andoid-app-img.png" alt="Web App Development"/>
-                        <div class="overlay">
-                            <div class="text">
-                                <h5>Web App Development</h5>
-                                <p>Online presence is indispensable for a business to thrive in this digital age of the world. Future Reality helps you with web app development to create a prominent web presence for greater traffic, leads, and sales.</p>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="grid-item box">
-                        <img src="images/services/andoid-app-img.png" alt="Cross-Platform Mobile App Development"/>
-                        <div class="overlay">
-                            <div class="text">
-                                <h5>Cross-Platform Mobile App Development</h5>
-                                <p>A native mobile app solely for a single platform is more costly than an app coded to operate relentlessly on all the platforms. Cross-platform app development helps you reach consumers on all platforms – operating system was never a problem.</p>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-			</div>
-		</div>
-	</section>
-    <!-- End Services -->
 
     <!-- Start App -->
     <section class="app py-3 py-md-3 py-lg-5">
