--- a/website-development.html
+++ b/website-development.html
@@ -471,54 +471,54 @@
 		<div class="container">
 			<div class="row">
                 <div class="col-lg-12 p-0">
-                    <div class="portfolio-filter">
+                    <div class="portfolio-filter web-service">
                         <div class="pf-item set-bg fashion large-height" data-setbg="images/home/pf-4.jpg" style="background-image: url(&quot;images/home/pf-4.jpg&quot;); position: absolute; left: 0%; top: 0px;">
                             <a href="images/home/pf-4.jpg" class="pf-icon image-popup"><span class="icon_plus"></span></a>
                             <div class="pf-text">
-                                <h4>COLORS SPEAK</h4>
-                                <span>Fashion</span>
+                                <h4>E-Commerce</h4>
+                                <span>Ecommerce website design and development services aid in the creation of a quality e-commerce experience that appeals to today's demanding customers. When you work with e-commerce website development, you'll be collaborating with e-commerce developers who understand high-performance e-commerce architectures and conversion-driven user interfaces.</span>
                             </div>
                         </div>
                         <div class="pf-item large-width large-height set-bg lifestyle" data-setbg="images/home/pf-2.jpg" style="background-image: url(&quot;images/home/pf-2.jpg&quot;); position: absolute; left: 19.9398%; top: 0px;">
                             <a href="images/home/pf-2.jpg" class="pf-icon image-popup"><span class="icon_plus"></span></a>
                             <div class="pf-text">
-                                <h4>COLORS SPEAK</h4>
-                                <span>Fashion</span>
+                                <h4>Enterprise Web Development Services</h4>
+                                <span>With a focus on creative, professional web design, we work closely with enterprise-level customers to produce excellent, high-performing, and secure custom websites. Our company provides the resources and knowledge to ensure that your project's objectives are not just fulfilled, but the final product creates the optimum satisfaction level.</span>
                             </div>
                         </div>
                         <div class="pf-item large-width set-bg natural" data-setbg="images/home/pf-3.jpg" style="background-image: url(&quot;images/home/pf-3.jpg&quot;); position: absolute; left: 59.9699%; top: 0px;">
                             <a href="images/home/pf-3.jpg" class="pf-icon image-popup"><span class="icon_plus"></span></a>
                             <div class="pf-text">
-                                <h4>COLORS SPEAK</h4>
-                                <span>Fashion</span>
+                                <h4>WordPress Web Development</h4>
+                                <span>Over 40% of all websites now use the simple-to-use, search engine-friendly, and adaptable building platform. WordPress website development services come with a user-friendly content management system (CMS) that lets you make changes on the fly.</span>
                             </div>
                         </div>
-                        <div class="pf-item set-bg set-bg wedding" data-setbg="images/home/pf-4.jpg" style="background-image: url(&quot;images/home/pf-4.jpg&quot;); position: absolute; left: 0%; top: 380px;">
+                        <div class="pf-item set-bg large-width wedding" data-setbg="images/home/pf-4.jpg" style="background-image: url(&quot;images/home/pf-4.jpg&quot;); position: absolute; left: 0%; top: 380px;">
                             <a href="images/home/pf-4.jpg" class="pf-icon image-popup"><span class="icon_plus"></span></a>
                             <div class="pf-text">
-                                <h4>COLORS SPEAK</h4>
-                                <span>Fashion</span>
+                                <h4>PHP Web Development</h4>
+                                <span>PHP development services are focused on making all forms of web applications' server-sides more safe and powerful. PHP development company effectively tames PHP to provide powerful online portals, B2C & B2B web apps, CMSs, and other web-based solutions, drawing on our PHP programming experience.</span>
                             </div>
                         </div>
 						<div class="pf-item set-bg set-bg wedding" data-setbg="images/home/pf-4.jpg" style="background-image: url(&quot;images/home/pf-4.jpg&quot;); position: absolute; left: 0%; top: 380px;">
                             <a href="images/home/pf-4.jpg" class="pf-icon image-popup"><span class="icon_plus"></span></a>
                             <div class="pf-text">
-                                <h4>COLORS SPEAK</h4>
-                                <span>Fashion</span>
+                                <h4>Custom Web App Development</h4>
+                                <span>Web application development solutions that tackle business difficulties in healthcare, finance, retail, and manufacturing are developed by us, a top web app development company. We make certain that the web solution meets your company's needs. Your business operations will be streamlined using custom web websites and apps.</span>
                             </div>
                         </div>
-						<div class="pf-item set-bg set-bg wedding" data-setbg="images/home/pf-4.jpg" style="background-image: url(&quot;images/home/pf-4.jpg&quot;); position: absolute; left: 0%; top: 380px;">
+						<div class="pf-item set-bg large-width wedding" data-setbg="images/home/pf-4.jpg" style="background-image: url(&quot;images/home/pf-4.jpg&quot;); position: absolute; left: 0%; top: 380px;">
                             <a href="images/home/pf-4.jpg" class="pf-icon image-popup"><span class="icon_plus"></span></a>
                             <div class="pf-text">
-                                <h4>COLORS SPEAK</h4>
-                                <span>Fashion</span>
+                                <h4>Custom CMS Web Development</h4>
+                                <span>The goal of content management system (CMS) development is to create custom solutions that make it easier to create, save, organize, alter, and publish digital content. The web development company is capable of providing custom CMS solutions that enable timely and cost-effective web content management while also encouraging website lead creation.</span>
                             </div>
                         </div>
-						<div class="pf-item large-width set-bg natural" data-setbg="images/home/pf-3.jpg" style="background-image: url(&quot;images/home/pf-3.jpg&quot;); position: absolute; left: 59.9699%; top: 0px;">
+						<div class="pf-item large-width set-bg natural web-service-img-4" data-setbg="images/home/pf-3.jpg" style="background-image: url(&quot;images/home/pf-3.jpg&quot;); position: absolute; left: 59.9699%; top: 0px;">
                             <a href="images/home/pf-3.jpg" class="pf-icon image-popup"><span class="icon_plus"></span></a>
                             <div class="pf-text">
-                                <h4>COLORS SPEAK</h4>
-                                <span>Fashion</span>
+                                <h4>Web Portal Development</h4>
+                                <span>We understand the business objectives of online enterprises, whether you're a startup or a large corporation. We create platforms for easy communication with clients to help you grow your business. We create business-to-business (B2B), business-to-consumer (B2C), vendor-to-consumer (V2C), and vendor-to-consumer (V2C) portals, as well as job, matrimony, dating, mailing, and other sorts of online portals.</span>
                             </div>
                         </div>
                     </div>
@@ -531,63 +531,6 @@
 		</div>
 	</section>
 	<!--End Service-->
-
-    <!-- Start Services -->
-    <section class="services py-3 py-md-3 py-lg-5" id="services">
-		<div class="container">
-			<div class="row">
-				<div class="col-lg-12 wow fadeInLeft" style="visibility: visible; animation-name: fadeInLeft;">
-					<div class="common-heading text-l">
-						<h2 class="common-heading">All-in-One Mobile App Development Services</h2>
-						<p class="mt10 text-center">Future Reality is an inclusive mobile app development company, having everything that takes to boost a business. Our vision is to offer brands with every mobile app solution that reinforces their branding with more visibility, accessibility, and of course build loyalty among the targeted audience. Reach consumers on every device regardless of the platform, operating system, and screen size with our robust mobile app development services.</p>
-						<p class="text-center"><a href="#"><u>Request for proposal</u></a></p>
-					</div>
-				</div>
-            </div>
-			<div class="row mt-5 mt-md-3">
-                <div class="grid">
-                    <div class="grid-sizer"></div>
-                    <div class="grid-item box">
-                        <img src="images/services/andoid-app-img.png" alt="Android App Development"/>
-                        <div class="overlay">
-                            <div class="text">
-                                <h5>Android App Development</h5>
-                                <p>Make the most out of the open-source free mobile operating system – Android. Get yourself a highly scalable android app that works across different platforms such as tablets, windows, TVs, etc. with our solid android app solutions.</p>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="grid-item box">
-                        <img src="images/services/andoid-app-img.png" alt="iOS App Development"/>
-                        <div class="overlay">
-                            <div class="text">
-                                <h5>iOS App Development</h5>
-                                <p>With a prodigious experience playing around with Apple and its operating system – iOS – we have mastered the state-of-artwork of iOS app development to create functional, feature-rich, consumer-centric, and user-friendly iOS apps.</p>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="grid-item box">
-                        <img src="images/services/andoid-app-img.png" alt="Web App Development"/>
-                        <div class="overlay">
-                            <div class="text">
-                                <h5>Web App Development</h5>
-                                <p>Online presence is indispensable for a business to thrive in this digital age of the world. Future Reality helps you with web app development to create a prominent web presence for greater traffic, leads, and sales.</p>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="grid-item box">
-                        <img src="images/services/andoid-app-img.png" alt="Cross-Platform Mobile App Development"/>
-                        <div class="overlay">
-                            <div class="text">
-                                <h5>Cross-Platform Mobile App Development</h5>
-                                <p>A native mobile app solely for a single platform is more costly than an app coded to operate relentlessly on all the platforms. Cross-platform app development helps you reach consumers on all platforms – operating system was never a problem.</p>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-			</div>
-		</div>
-	</section>
-    <!-- End Services -->
 
     <!-- Start App -->
     <section class="app py-3 py-md-3 py-lg-5">
