placea case study

--- a/our-process.html
+++ b/our-process.html
@@ -387,7 +387,8 @@
 								</ul>
 							</div>
 							<div class="bread-title">
-								<h2>Development Process</h2> </div>
+								<h2>Development Process</h2>
+							</div>
 						</div>
 					</div>
 				</div>
@@ -398,15 +399,16 @@
 	<!--Start Process-->
 	<section class="service-block pad-tb">
 		<div class="container">
-			<div class="row justify-content-center">
+			<!-- <div class="row justify-content-center">
 				<div class="col-lg-8">
-					<div class="common-heading ptag"> <span>Process</span>
+					<div class="common-heading ptag">
+						<span>Process</span>
 						<h2>Our Process</h2>
 						<p>FUTUREALITI, work on all of our Web and App development projects in a very professional way with creative moralistic methods to provide accurate results to our clients. Our target is to convert your Ideas into Reality.</p>
 					</div>
 				</div>
-			</div>
-			<div class="row my-0 my-md-5">
+			</div> -->
+			<!-- <div class="row my-0 my-md-5">
                 <div class="col-md-4">
                     <div class="card our-process-card">
                         <div class="card-body">
@@ -488,7 +490,9 @@
                         </div>
                     </div>
                 </div>
-            </div>
+            </div> -->
+
+			
 		</div>
 	</section>
 	<!--End Process-->
