--- a/testimonials.html
+++ b/testimonials.html
@@ -33,14 +33,14 @@
 		<div class="container-fluid m-pad">
 			<div class="menu-header">
 				<div class="dsk-logo">
-					<a class="nav-brand" href="./">
+					<a class="nav-brand" href="index.html">
 						<img src="images/white-logo.png" alt="Logo" class="mega-white-logo" />
 						<img src="images/logo.png" alt="Logo" class="mega-darks-logo" />
 					</a>
 				</div>
 				<div class="custom-nav" role="navigation">
 					<ul class="nav-list">
-					<li> <a href="#." class="menu-links">Home</a> </li>
+					<li> <a href="index.html" class="menu-links">Home</a> </li>
 					<li class="sbmenu">
 						<a href="#" class="menu-links">About Us</a>
 							<div class="nx-dropdown">
@@ -619,7 +619,7 @@
 	</section>
 	<!--End text reviews-->
 	
-	<!--Start Footer-->
+	<!-- Start Footer -->
 	<footer>
 		
 		<div class="footer-row2">
@@ -717,7 +717,71 @@
 			</div>
 		</div>
 	</footer>
-	<!--End Footer-->
+	<!-- End Footer -->
+
+	<!-- End Get Quote -->
+	<div class="modal" id="myModal">
+		<div class="modal-dialog modal-lg">	
+			<div class="modal-content">
+				<div class="modal-header">
+					<h4 class="modal-title">Get A Quote</h4>
+					<button type="button" class="close" data-bs-dismiss="modal">×</button>
+				</div>
+				<div class="modal-body">
+					<div class="form-block header-quote-form">
+						<form action="https://digitroopers.com/public/leads" method="post" id="contactForm" data-toggle="validator" class="shake">
+							<input type="hidden" name="_token" value="0dZyBJ8Cow0EgpBsKtS4NDxAAJ1Cq0l0XIC7gPHx">
+							<div class="row">
+								<div class="form-group col-sm-6">
+									<input type="text" id="name" name="name" placeholder="Enter name" required="" data-error="Please fill Out" class="form-control">
+									<div class="help-block with-errors"></div>
+								</div>
+								<div class="form-group col-sm-6">
+									<input type="email" id="email" name="email" placeholder="Enter email" required="">
+									<div class="help-block with-errors"></div>
+								</div>
+							</div>
+							<div class="row">
+								<div class="form-group col-sm-6">
+									<input type="text" id="mobile" name="mobile" placeholder="Enter mobile" required="" data-error="Please fill Out">
+									<div class="help-block with-errors"></div>
+								</div>
+								<div class="form-group col-sm-6">
+									<select name="job" class="custom-select">
+										<option selected="">Select</option>
+										<option value="mobile-app-development">Mobile App Development</option>
+										<option value="ar-vr-app-development">AR & VR App Development</option>
+										<option value="strategic-design-consultancy">Strategic Design Consultancy</option>
+										<option value="mobile-app-qa-and-testing">Mobile App QA and Testing</option>
+										<option value="web-portal-development">Web Portal Development</option>
+										<option value="connected-devices">Connected Devices</option>
+									</select>
+									<div class="help-block with-errors"></div>
+								</div>
+							</div>
+							<div class="row">
+								<div class="form-group col-sm-6">
+									<input type="text" name="company" id="company" placeholder="Enter company name (optional)" required="" data-error=""> </div>
+								<div class="form-group col-sm-6">
+									<input type="text" id="subject" name="subject" placeholder="Enter subject" required="" data-error="Please fill Out">
+									<div class="help-block with-errors"></div>
+								</div>
+							</div>
+							<div class="form-group">
+								<textarea id="message" name="message" rows="5" placeholder="Enter your message" required=""></textarea>
+								<div class="help-block with-errors"></div>
+							</div>
+							<div class="modal-footer">
+								<button type="submit" name="submit" id="form-submit" class="btn lnk btn-main bg-btn">Submit <i class="fas fa-chevron-right fa-icon"></i></button>
+							</div>
+						</form>
+					</div>
+				</div>
+			</div>
+		</div>
+	</div>
+	<!-- End Get Quote -->
+	
 	<!-- js placed at the end of the document so the pages load faster -->
 	<script src="js/vendor/modernizr-3.5.0.min.js"></script>
 	<script src="js/jquery.min.js"></script>
