--- a/index.html
+++ b/index.html
@@ -44,14 +44,14 @@
 		<div class="container-fluid m-pad">
 			<div class="menu-header">
 				<div class="dsk-logo">
-					<a class="nav-brand" href="./">
+					<a class="nav-brand" href="index.html">
 						<img src="images/white-logo.png" alt="Logo" class="mega-white-logo" />
 						<img src="images/logo.png" alt="Logo" class="mega-darks-logo" />
 					</a>
 				</div>
 				<div class="custom-nav" role="navigation">
 					<ul class="nav-list">
-					   <li> <a href="#." class="menu-links">Home</a> </li>
+					   <li> <a href="index.html" class="menu-links">Home</a> </li>
 					   <li class="sbmenu">
 						   <a href="#" class="menu-links">About Us</a>
 							<div class="nx-dropdown">
@@ -2776,7 +2776,7 @@
 	</section>
 	<!--End Location-->
 
-	<!--Start Footer-->
+	<!-- Start Footer -->
 	<footer>
 		<div class="footer-row2">
 			<div class="container">
@@ -2899,7 +2899,7 @@
 			</div>
 		</div>
 	</footer>
-	<!--End Footer-->
+	<!-- End Footer -->
 	
 	<!-- lead generaton popup start -->
 	<div class="modal leadpopup" id="leadModal">
@@ -2952,15 +2952,16 @@
 			</div>
 		</div>
 	</div>
+	<!-- lead generaton popup end -->
+
+	<!-- End Get Quote -->
 	<div class="modal" id="myModal">
 		<div class="modal-dialog modal-lg">	
 			<div class="modal-content">
-				<!-- Modal Header -->
 				<div class="modal-header">
 					<h4 class="modal-title">Get A Quote</h4>
 					<button type="button" class="close" data-bs-dismiss="modal">×</button>
 				</div>
-				<!-- Modal body -->
 				<div class="modal-body">
 					<div class="form-block header-quote-form">
 						<form action="https://digitroopers.com/public/leads" method="post" id="contactForm" data-toggle="validator" class="shake">
@@ -3011,11 +3012,11 @@
 						</form>
 					</div>
 				</div>
-				<!-- Modal footer -->
 			</div>
 		</div>
 	</div>
-	<!-- lead generaton popup end -->
+	<!-- End Get Quote -->
+
 	<!-- js placed at the end of the document so the pages load faster -->
 	<script src="js/vendor/modernizr-3.5.0.min.js"></script>
 	<script src="js/jquery.min.js"></script>
