case-study and portfolio updated

--- a/about-us.html
+++ b/about-us.html
@@ -222,7 +222,7 @@
 								</div>
 							</div>
 					 	</li>
-					   	<li> <a href="case-study.html" class="menu-links">Case Study</a> </li>
+					   	<li> <a href="portfolio.html" class="menu-links">Portfolio</a> </li>
 					   	<li> <a href="contact-us.html" class="menu-links">Contact Us</a> </li>
 					</ul>
 				<!-- mobile + desktop - sidebar menu- dark mode witch and button -->
@@ -342,7 +342,7 @@
 							</li>
 						</ul>
 					</li>
-					<li><a href="case-study.html">Case Study</a></li>
+					<li><a href="portfolio.html">Portoflio</a></li>
 					<li><a href="contact-us.html">Contact Us</a></li>
 				</ul>
 				<ul class="bottom-nav">
