--- a/game-development.html
+++ b/game-development.html
@@ -139,7 +139,7 @@
                                                     <li><a href="why-us.html">Why Us</a></li>
                                                     <li><a href="team.html">Our Team</a></li>
                                                     <li><a href="team-details.html">Team Single</a></li>
-                                                    <li><a href="case-study.html">Case Study</a></li>
+                                                    <li><a href="portfolio.html">Portoflio</a></li>
                                                     <li><a href="case-study-details.html">Case Study Single</a></li>
                                                 </ul>
                                             </div>
@@ -336,7 +336,7 @@
                             <li><a href="why-us.html">Why Us</a></li>
                             <li><a href="team.html">Our Team</a></li>
                             <li><a href="team-details.html">Team Single</a></li>
-                            <li><a href="case-study.html">Case Study</a></li>
+                            <li><a href="portfolio.html">Portoflio</a></li>
                             <li><a href="case-study-details.html">Case Study Single</a></li>
                             <li><a href="mission-vision.html">Mission & Vision</a></li>
                             <li><a href="development-process.html">Development Process</a></li>
