--- a/index.html
+++ b/index.html
@@ -232,7 +232,7 @@
 								</div>
 							</div>
 					 	</li>
-					   	<li> <a href="case-study.html" class="menu-links">Case Study</a> </li>
+					   	<li> <a href="portfolio.html" class="menu-links">Portfolio</a> </li>
 					   	<li> <a href="contact-us.html" class="menu-links">Contact Us</a> </li>
 					</ul>
 				<!-- mobile + desktop - sidebar menu- dark mode witch and button -->
@@ -352,7 +352,7 @@
 							</li>
 						</ul>
 					</li>
-					<li><a href="case-study.html">Case Study</a></li>
+					<li><a href="portfolio.html">Portoflio</a></li>
 					<li><a href="contact-us.html">Contact Us</a></li>
 				</ul>
 				<ul class="bottom-nav">
@@ -501,7 +501,8 @@
 		<div class="container">
 			<div class="row justify-content-center text-center">
 				<div class="col-lg-10">
-					<div class="common-heading"> <span>We Are Creative Agency</span>
+					<div class="common-heading">
+						<span>We Are Creative Agency</span>
 						<h1 class="mb30"><span class="text-second">Top-rated</span> Web And Mobile App Development Company</h1>
 						<p>Lorem Ipsum is <span class="text-radius text-light text-animation bg-b">simply dummy</span> text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. <span class="text-bold">Lorem Ipsum</span> is simply dummy text of the printing and typesetting industry. <span class="text-bold">Lorem Ipsum </span> is simply dummy text of the printing and typesetting industry. </p>
 						<h3 class="mt30 mb30">Big Ideas, creative people, new technology.</h3>
@@ -633,15 +634,15 @@
 			<div id="ar" class="tab-pane active"><br>
 				<div class="scrollHalf">
 					<div class="scrollHalf__grupo row h-100" data-scroll>
-						<div class="scrollHalf__grupo__imagen col-12 col-sm-12 col-md-6 col-lg-6 col-xl-6 mt-auto mb-auto first-cs">
+						<div class="scrollHalf__grupo__imagen col-12 col-sm-12 col-md-6 col-lg-6 col-xl-6 my-auto first-cs">
 							<img src="images/case-study/placea-app.png" class="img-fluid" />
 						</div>
-						<div class="scrollHalf__grupo__contenido col-12 col-sm-12 col-md-6 col-lg-6 col-xl-4 offset-xl-1 mt-auto mb-auto">
-							<img src="images/case-study/amj-logo.jpg" alt="" class="icon-img">
-							<h3 class="techCat">Game App</h3>
-							<h2 class="mb-20 heading3 font-size-28 mt-3  text-left">Foodly - the hub of delicious cuisines</h2>
-							<p class="text-left" style="margin-top: 10px;padding: 20px;">Order breakfast, lunch, or dinner, rate your favorite restaurants & track your order - one platform to curb your hunger.</p>
-							<a target="_blank" href="https://www.cubix.co/work/hictic" class="btn btn-naked text-uppercase ltr-sp-1 size-sm font-weight-bold liquid-lp-read-more text-left" style="margin-top: 10px;">
+						<div class="scrollHalf__grupo__contenido col-12 col-sm-12 col-md-6 col-lg-6 col-xl-5 offset-xl-1 my-auto">
+							<img src="images/case-study/placea-logo.png" alt="" class="icon-img">
+							<h3 class="pt-3">AR App</h3>
+							<h2 class="pt-3">Placea Furniture Store</h2>
+							<p class="pt-3">Placea Place allows you to digitally 'place' furniture in your room. Everything in IKEA Place is 3D and accurate to scale, from sofas and lamps to carpets and tables, so you can make sure it's the perfect size, design, and practicality for your space.</p>
+							<a target="_blank" href="placea-furniture-shop.html" class="btn btn-naked text-uppercase pt-5">
 								<span class="btn-line btn-line-before" style="background-color:#0f63f4"></span>
 								<span class="btn-txt" style="color:#0f63f4"> &mdash;&#32;View Case Study</span>
 								<span class="btn-line btn-line-after" style="background-color:#0f63f4"></span>
