--- a/evil-witch.html
+++ b/evil-witch.html
@@ -28,17 +28,6 @@
 	<div id="progress-bar"></div>
 	<!-- End Progress Bar -->
 
-	<!-- Start Preloader -->
-	<div class="onloadpage" id="page_loader">
-		<div class="pre-content">
-			<div class="logo-pre">
-				<img src="images/logo.png" alt="Logo" class="img-fluid" />
-			</div>
-			<div class="pre-text- text-radius text-light text-animation bg-b">Futurealiti - Ideas Into Reality</div>
-		</div>
-	</div>
-	<!-- End Preloader -->
-
 	<!-- Start Header -->
 	<header class="nav-bg-b main-header navfix fixed-top menu-white">
 		<div class="container-fluid m-pad">
@@ -232,7 +221,7 @@
 								</div>
 							</div>
 					 	</li>
-					   	<li> <a href="case-study.html" class="menu-links">Case Study</a> </li>
+					   	<li> <a href="portfolio.html" class="menu-links">Portfolio</a> </li>
 					   	<li> <a href="contact-us.html" class="menu-links">Contact Us</a> </li>
 					</ul>
 				<!-- mobile + desktop - sidebar menu- dark mode witch and button -->
@@ -352,7 +341,7 @@
 							</li>
 						</ul>
 					</li>
-					<li><a href="case-study.html">Case Study</a></li>
+					<li><a href="portfolio.html">Portoflio</a></li>
 					<li><a href="contact-us.html">Contact Us</a></li>
 				</ul>
 				<ul class="bottom-nav">
@@ -383,156 +372,163 @@
 		</div>
 	</header>
 	<!--End Header -->
-
-	<!--Start Breadcrumb Area -->
-	<section class="breadcrumb-area banner-3">
-		<div class="text-block">
-			<div class="container">
-				<div class="row">
-			  		<div class="col-lg-12 v-center">
-						<div class="bread-inner">
-				  			<div class="bread-menu">
-								<ul>
-									<li><a href="index.html">Home</a></li>
-									<li><a href="#">Portfolio</a></li>
-								</ul>
-							</div>
-							<div class="bread-title">
-								<h2>Our Projects</h2>
-							</div>
-						</div>
-					</div>
-				</div>
-			</div>
-		</div>
-	  </section>
-	<!-- End Breadcrumb Area -->
-
-	<!-- Start Portfolio -->
-	<section class="portfolio-page pad-tb">
+	
+	<!-- Start Breadcrumb Area -->
+	<section class="case-study">
 		<div class="container">
-			<div class="row justify-content-left">
-				<div class="col-lg-4">
-					<div class="common-heading pp"> <span>Our Work</span>
-						<h2>Portfolio</h2> </div>
-				</div>
-				<div class="col-lg-8 v-center">
-					<div class="filters">
-						<ul class="filter-menu">
-							<li data-filter="*" class="is-checked">All</li>
-							<li data-filter=".ar">AR</li>
-							<li data-filter=".game">Game</li>
-							<li data-filter=".vr">VR</li>
-							<li data-filter=".mobile">Mobile Apps</li>
-							<li data-filter=".website">Website</li>
-							<li data-filter=".design">Design</li>
-						</ul>
-					</div>
-				</div>
-			</div>
-			<div class="row card-list">
-				<div class="col-lg-12 col-md-12 grid-sizer"></div>
-				<div class="col-lg-12 col-sm-12 single-card-item app">
-					<div class="pbwide shadow bg-gradient1">
-						<div class="portfolio-item-info-tt">
-							<div class="logowide mb20"><img src="images/client/customer-logo-5.png" alt="logo" class="img-fluid"></div>
-							<div class="widebloktag"><span>Design</span> <span>Coding</span> <span>Design</span> </div>
-							<h3 class="mt30 mb30">Weather &amp; Radar - Accurate Weather Forecast</h3>
-							<ul class="info-list-ul">
-								<li>Product Strategy</li>
-								<li>Product UI/UX Design</li>
-								<li>Branding Design</li>
-								<li>Design System</li>
-							</ul>
-							<a href="#" class="btn-outline lnk mt30">View Case Study  <i class="fas fa-chevron-right fa-icon"></i><span class="circle"></span></a>
-						</div>
-						<div class="portfolio-wide-image">
-							<div class="img-wide-blocktt tilt-outer">
-								<div class="innerwidedevice tilt-inner" data-tilt="" data-tilt-max="4" data-tilt-speed="1000" data-tilt-perspective="2000" style="will-change: transform; transform: perspective(2000px) rotateX(0deg) rotateY(0deg) scale3d(1, 1, 1);">
-									<div class="desktopblock shadow1"><img src="images/portfolio/portfolio-wide-1.jpg" alt="img" class="img-fluid"> </div>
-									<div class="mobileblock shadow1"><img src="images/portfolio/portfolio-wide-1a.jpg" alt="img" class="img-fluid"> </div>
-								</div>
-							</div>
-						</div>
-					</div>
-				</div>
-				<div class="col-lg-12 col-sm-12 single-card-item website">
-					<div class="pbwide shadow bg-gradient2">
-						<div class="portfolio-item-info-tt">
-							<div class="logowide mb20"><img src="images/client/customer-logo-3.png" alt="logo" class="img-fluid"></div>
-							<div class="widebloktag"><span>Design</span> <span>Coding</span> <span>Design</span> </div>
-							<h3 class="mt30 mb30">Weather &amp; Radar - Accurate Weather Forecast</h3>
-							<ul class="info-list-ul">
-								<li>Product Strategy</li>
-								<li>Product UI/UX Design</li>
-								<li>Branding Design</li>
-								<li>Design System</li>
-							</ul>
-							<a href="#" class="btn-outline lnk mt30">View Case Study  <i class="fas fa-chevron-right fa-icon"></i><span class="circle"></span></a>
-						</div>
-						<div class="portfolio-wide-image">
-							<div class="img-wide-blocktt tilt-outer">
-								<div class="innerwidedevice tilt-inner" data-tilt="" data-tilt-max="4" data-tilt-speed="1000" data-tilt-perspective="2000" style="will-change: transform; transform: perspective(2000px) rotateX(0deg) rotateY(0deg) scale3d(1, 1, 1);">
-									<div class="desktopblock shadow1"><img src="images/portfolio/portfolio-wide-2.jpg" alt="img" class="img-fluid"> </div>
-									<div class="mobileblock shadow1"><img src="images/portfolio/portfolio-wide-2a.jpg" alt="img" class="img-fluid"> </div>
-								</div>
-							</div>
-						</div>
-					</div>
-				</div>
-				<div class="col-lg-12 col-sm-12 single-card-item graphic">
-					<div class="pbwide shadow bg-gradient3">
-						<div class="portfolio-item-info-tt">
-							<div class="logowide mb20"><img src="images/client/customer-logo-7.png" alt="logo" class="img-fluid"></div>
-							<div class="widebloktag"><span>Design</span> <span>Coding</span> <span>Design</span> </div>
-							<h3 class="mt30 mb30">Weather &amp; Radar - Accurate Weather Forecast</h3>
-							<ul class="info-list-ul">
-								<li>Product Strategy</li>
-								<li>Product UI/UX Design</li>
-								<li>Branding Design</li>
-								<li>Design System</li>
-							</ul>
-							<a href="#" class="btn-outline lnk mt30">View Case Study  <i class="fas fa-chevron-right fa-icon"></i><span class="circle"></span></a>
-						</div>
-						<div class="portfolio-wide-image">
-							<div class="img-wide-blocktt tilt-outer">
-								<div class="innerwidedevice tilt-inner" data-tilt="" data-tilt-max="4" data-tilt-speed="1000" data-tilt-perspective="2000">
-									<div class="desktopblock shadow1"><img src="images/portfolio/portfolio-wide-3.jpg" alt="img" class="img-fluid"> </div>
-									<div class="mobileblock shadow1"><img src="images/portfolio/portfolio-wide-3a.jpg" alt="img" class="img-fluid"> </div>
-								</div>
-							</div>
-						</div>
-					</div>
-				</div>
-				<div class="col-lg-12 col-sm-12 single-card-item website">
-					<div class="pbwide shadow bg-gradient4">
-						<div class="portfolio-item-info-tt">
-							<div class="logowide mb20"><img src="images/client/customer-logo-5.png" alt="logo" class="img-fluid"></div>
-							<div class="widebloktag"><span>Design</span> <span>Coding</span> <span>Design</span> </div>
-							<h3 class="mt30 mb30">Weather &amp; Radar - Accurate Weather Forecast</h3>
-							<ul class="info-list-ul">
-								<li>Product Strategy</li>
-								<li>Product UI/UX Design</li>
-								<li>Branding Design</li>
-								<li>Design System</li>
-							</ul>
-							<a href="#" class="btn-outline lnk mt30">View Case Study  <i class="fas fa-chevron-right fa-icon"></i><span class="circle"></span></a>
-						</div>
-						<div class="portfolio-wide-image">
-							<div class="img-wide-blocktt tilt-outer">
-								<div class="innerwidedevice tilt-inner" data-tilt="" data-tilt-max="4" data-tilt-speed="1000" data-tilt-perspective="2000" style="will-change: transform; transform: perspective(2000px) rotateX(0deg) rotateY(0deg) scale3d(1, 1, 1);">
-									<div class="desktopblock shadow1"><img src="images/portfolio/portfolio-wide-4.jpg" alt="img" class="img-fluid"> </div>
-									<div class="mobileblock shadow1"><img src="images/portfolio/portfolio-wide-4a.jpg" alt="img" class="img-fluid"> </div>
-								</div>
-							</div>
-						</div>
+			<div class="row justify-content-md-center">
+				<div class="col-lg-10 v-center" style="margin-top:10%">
+					<div id="axis" class="one">
+						<img src="images/case-study/rocco/character.png" alt="" height="80%" width="80%" class="object van move-right">
 					</div>
 				</div>
 			</div>
 		</div>
 	</section>
-	<!-- End Portfolio -->
+	<!-- End Breadcrumb Area -->
+	
+	<!-- Start Chararter Section -->
+	<section class="characterDesign pt-5">
+		<div class="container">
+			<div class="row justify-content-md-center">
+				<div class="col-lg-5 col-12 col-md-12">
+					<h3 class="characterHeading">Concept of Character Design</h3>
+					<p class="characterDescription">After much effort, our team found a unique character idea covering the horror feel. It was crucial to converting ideas into reality, especially when it comes to character design from scratch. But our expert designers' record proves that they can make the impossible possible. Because of the team's great effort and professional approach, a great memorable character named Evil witch, which covers a half-human body and half spider, became a reality.</p>
+				</div>
+				<div class="col-lg-1"></div>
+				<div class="col-lg-3 col-6 col-md-6">
+					<img src="images/case-study/rocco/first-character.png" alt="" height="100%" width="100%">
+				</div>
+				<div class="col-lg-3 col-6 col-md-6">
+					<img src="images/case-study/rocco/second-character.png" alt="" height="100%" width="100%">
+				</div>
+			</div>
+		</div>
+		
+	</section>
 
+	<section class="characterDesign2 mt-3">
+		<div class="container">
+			<div class="row">
+				<div class="col-lg-6 ">
+					<img src="images/case-study/rocco/third-character.png" alt="" height="100%" width="100%">
+				</div>
+				<div class="col-lg-6 my-auto">
+					<h3 class="characterHeading2">Who is the Evil Witch?</h3>
+					<p class="characterDescription2">During the brainstorming for the character, it was decided that this character mode, feel, and features must communicate through visuals. The evil witch has had to be powerful and visually horror, having evil power and bad-tempered at the same time. We were confident that this character would be the best horror character that attracted viewers.</p>
+				</div>
+			</div>
+		</div>
+	</section>
+
+	<section class="sketing mt-3">
+		<div class="container">
+			<div class="row">
+				<div class="col-lg-6 v-center">
+					<img src="images/case-study/rocco/fourth-character.png" alt="" height="100%" width="100%">
+				</div>
+				<div class="col-lg-6 my-auto">
+					<h3 class="characterHeading2 text-center" style="color: #fff;"> Sketches Of Evil Witch</h3>
+					<p class="characterDescription3 text-center" style="color: #fff;">After brainstorming and the concept of the character, real work had to start that was Sketch of the evil witch.We have to work on the main Sketch of the evil witch due to our designer's hard work and great effort. This work was done before the time.</p>
+				</div>
+			</div>
+		</div>
+	</section>
+	<!-- End Chararter Section -->
+
+	<!-- Start Chararter Section -->
+	<section class="characterImages py-5">
+		<div class="container">
+			<div class="row justify-content-md-center">
+				<div class="col-lg-2 col-6 col-md-4"> <img src="images/case-study/rocco/character-1.png" alt="" height="100%" width="100%"> </div>
+				<div class="col-lg-2 col-6 col-md-4"> <img src="images/case-study/rocco/character-2.png" alt="" height="100%" width="100%"> </div>
+				<div class="col-lg-2 col-6 col-md-4"> <img src="images/case-study/rocco/character-3.png" alt="" height="100%" width="100%"> </div>
+				<div class="col-lg-2 col-6 col-md-4"> <img src="images/case-study/rocco/character-4.png" alt="" height="100%" width="100%"> </div>
+				<div class="col-lg-2 col-6 col-md-4"> <img src="images/case-study/rocco/character-5.png" alt="" height="100%" width="100%"> </div>
+			</div>
+			<div class="row justify-content-md-center">
+				<div class="col-lg-2 col-6 col-md-4"> <img src="images/case-study/rocco/character-6.png" alt="" height="100%" width="100%"> </div>
+				<div class="col-lg-2 col-6 col-md-4"> <img src="images/case-study/rocco/character-7.png" alt="" height="100%" width="100%"> </div>
+				<div class="col-lg-2 col-6 col-md-4"> <img src="images/case-study/rocco/character-8.png" alt="" height="100%" width="100%"> </div>
+				<div class="col-lg-2 col-6 col-md-4"> <img src="images/case-study/rocco/character-9.png" alt="" height="100%" width="100%"> </div>
+				<div class="col-lg-2 col-6 col-md-4"> <img src="images/case-study/rocco/character-10.png" alt="" height="100%" width="100%"> </div>
+			</div>
+			<div class="row justify-content-md-center">
+				<div class="col-lg-3 col-6 col-md-4"> <img src="images/case-study/rocco/character-11.png" alt="" height="100%" width="100%"> </div>
+				<div class="col-lg-3 col-6 col-md-4"> <img src="images/case-study/rocco/character-12.png" alt="" height="100%" width="100%"> </div>
+				<div class="col-lg-3 col-6 col-md-4"> <img src="images/case-study/rocco/character-13.png" alt="" height="100%" width="100%"> </div>
+			</div>
+		</div>
+	</section>
+	<!-- End Chararter Section -->
+
+	<!-- character description section start -->
+	<section class="container py-5">
+		<div class="row justify-content-md-center">
+			<div class="col-lg-8 text-center ">
+				<p class="characterDescription4">After this part, we had to work on this character sketch covering its movement and acting and different poses. These poses include how the witch will look when it looks on the left side and right side, and sketches also cover different movements of the legs. </p>
+			</div>
+		</div>
+	</section>
+	<!-- character description section end -->
+	<!-- character large image section start -->
+	<section class="container">
+		<div class="row justify-content-md-center">
+			<div class="col-lg-7"> <img src="images/case-study/rocco/characters.png" alt="" height="100%" width="100%"> </div>
+		</div>
+	</section>
+	<section class="py-5 characterConcept">
+		<div class="container-fluid">
+			<div class="row justify-content-md-center">
+				<div class="col-lg-3">
+					<img src="images/case-study/rocco/concept-2.png" alt="" height="100%" width="100%">
+				</div>
+				<div class="col-lg-5 text-center my-auto">
+					<h3 class="characterHeading5 text-white">Concept of Evil Witch</h3>
+					<p class="characterDescription5 text-white">The concept of evil covers all its specifications like a character can through the web because this character is a mixture of human and spider with this character should look dangerous and bad-tempered because the character's role is villain having some extraordinary power.</p>
+				</div>
+				<div class="col-lg-3">
+					<img src="images/case-study/rocco/concept-1.png" alt="" height="100%" width="100%">
+				</div>
+			</div>
+		</div>
+	</section>
+	<!-- character description section end -->
+	<!-- about character section start -->
+	<section class="container py-5">
+		<div class="row justify-content-md-center">
+			<div class="col-lg-6">
+				<img src="images/case-study/rocco/about-1.png" alt="" class="img-fluid">
+			</div>
+			<div class="col-lg-6 my-auto">
+				<h3 class="characterHeadingAbout">Ready Design</h3>
+				<p class="characterDescriptionAbout">After sketch finalization, It had been a long way, but we were done it fast. The team started work to make the character its natural form, and within a couple of days, all things that needed to be done evil were ready as per expectation, which is provided in the sketch phase and all emotions designs.</p>
+			</div>
+		</div>
+		<div class="row justify-content-md-center">
+			<div class="col-lg-5" style="margin-top: 100px;">
+				<img src="images/case-study/rocco/about-2.png" alt="" class="img-fluid">
+				<p class="characterDescriptionAbout2">This design shows the emotion when an evil witch is ready to attack with high tempered.</p>
+			</div>
+			<div class="col-lg-2"></div>
+			<div class="col-lg-5" style="margin-top: 100px;">
+				<img src="images/case-study/rocco/about-3.png" alt="" class="img-fluid">
+				<p class="characterDescriptionAbout2">This design shows the emotion when an evil witch is doing the spiritual prayer of a demon.</p>
+			</div>
+		</div>
+		<div class="row justify-content-md-center" style="margin-bottom: 100px">
+			<div class="col-lg-5" style="margin-top: 100px;">
+				<img src="images/case-study/rocco/about-4.png" alt="" class="img-fluid">
+				<p class="characterDescriptionAbout2">This design shows the emotion when an evil witch is on focus and trying to get the idea of the situation.</p>
+			</div>
+			<div class="col-lg-2"></div>
+			<div class="col-lg-5" style="margin-top: 100px;">
+				<img src="images/case-study/rocco/about-5.png" alt="" height="100%" width="100%">
+				<p class="characterDescriptionAbout2">This design shows the emotion when an evil witch is ready to throw the dangerous web.</p>
+			</div>
+		</div>
+	</section>
+	<!-- about character section end -->
 	<!-- Start Footer -->
 	<footer>
 		<div class="footer-row2">
@@ -726,14 +722,7 @@
 	<script src="js/jquery.min.js"></script>
 	<script src="js/bootstrap.bundle.min.js"></script>
 	<script src="js/plugin.min.js"></script>
-	<script src="js/preloader.js"></script>
 	<script src="js/dark-mode.js"></script>
-	<script src="js/progress-bar.js"></script>
-	<script src='js/scroll-out.min.js'></script>
-	<script src='js/isotope.pkgd.min.js'></script>
-	<script src="js/masonry.pkgd.min.js"></script>
-	<script src="js/owl.carousel.js"></script>
-	<script src="js/owl.navigation.js"></script>
 	<!--common script file-->
 	<script src="js/main.js"></script>
 </body>
