--- a/placea-furniture-shop.html
+++ b/placea-furniture-shop.html
@@ -221,7 +221,7 @@
 								</div>
 							</div>
 					 	</li>
-					   	<li> <a href="case-study.html" class="menu-links">Case Study</a> </li>
+					   	<li> <a href="portfolio.html" class="menu-links">Portfolio</a> </li>
 					   	<li> <a href="contact-us.html" class="menu-links">Contact Us</a> </li>
 					</ul>
 				<!-- mobile + desktop - sidebar menu- dark mode witch and button -->
@@ -341,7 +341,7 @@
 							</li>
 						</ul>
 					</li>
-					<li><a href="case-study.html">Case Study</a></li>
+					<li><a href="portfolio.html">Portoflio</a></li>
 					<li><a href="contact-us.html">Contact Us</a></li>
 				</ul>
 				<ul class="bottom-nav">
@@ -379,7 +379,7 @@
 			<div class="row justify-content-md-center">
 				<div class="col-lg-6 v-center pt-5 pt-md-5 pt-lg-0">
 					<h1 class="text-white">AR Furniture Shop</h1>
-					<p class="text-white">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.</p>
+					<p class="text-white">Placea Place allows you to digitally 'place' furniture in your room. Everything in IKEA Place is 3D and accurate to scale, from sofas and lamps to carpets and tables, so you can make sure it's the perfect size, design, and practicality for your space.</p>
 				</div>
                 <div class="col-lg-6 v-center pt-3 pt-md-5 pt-lg-5">
                     <img src="images/case-study/placea/placea-banner.png" alt="Placea Banner" class="img-fluid placea-banner-img">
@@ -397,8 +397,8 @@
 					<img src="images/case-study/placea/placea-discover.png" alt="Placea Discover" class="img-fluid placea-discover-img">
 				</div>
 				<div class="col-lg-6 wow fadeInRight v-center">
-					<h2 class="placea-discover-heading">Discover new furniture shop with Augmented Reality </h2>
-					<p class="placea-discover-text">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in</p>
+					<h2 class="placea-discover-heading">Discover new furniture shop with Augmented Reality</h2>
+					<p class="placea-discover-text">You may install furniture, shelving systems, decorations, and change the color of the walls before exporting your design in both 3D and 2D and sending it to others for approval or mockery. Ceilings can also be included in the models, allowing you to add virtual suspended light fittings. Other new capabilities include the ability to interact with goods, such as turning AR lighting on and off, and stacking items on top of each other, such as a lamp on a sideboard.</p>
 				</div>
 			</div>
 		</div>
@@ -641,7 +641,7 @@
 			</div>
 			<div class="row justify-content-center pt-3">
 				<div class="col-lg-8">
-					<p class="placea-sketch-text">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy</p>
+					<p class="placea-sketch-text">One of the most sought-after skills in architecture is the ability to draw well. Unfortunately for people who do not have an intrinsic talent for sketching, augmented reality allows them to visualize furniture placement easily with other advance features.</p>
 				</div>
 			</div>
 			<div class="row pt-3 justify-content-center text-center">
@@ -731,7 +731,7 @@
 			</div>
 			<div class="row justify-content-center pt-3">
 				<div class="col-lg-8">
-					<p class="placea-visual-text">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy</p>
+					<p class="placea-visual-text">To make this visual clear and vibrant, we used orange as the primary hue, while the other colors are for furniture that can be made in a variety of different shades.</p>
 				</div>
 			</div>
 			<div class="row pt-4">
@@ -775,8 +775,8 @@
 		<div class="container">
 			<div class="row ">
 				<div class="col-lg-6 wow fadeInLeft v-center">
-					<h2 class="placea-app-heading">Name here</h2>
-					<p class="placea-app-text">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in</p>
+					<h2 class="placea-app-heading">View in AR</h2>
+					<p class="placea-app-text">Placea place makes it easier to make shopping decisions in your own home, to get inspired and explore many different items, styles, and colors in real-life settings. You can choose any sofa and chair, as well as classify which color best matches it, without having to go to the store.</p>
 				</div>
 				<div class="col-lg-6 wow fadeInRight">
 					<img src="images/case-study/placea/placea-app-img-1.png" alt="Placea App" class="img-fluid placea-app-img">
@@ -804,8 +804,14 @@
 	<section class="placea-app-link-py-3 py-md-0 py-lg-0">
 		<div class="container">
 			<div class="row">
-				<div class="col-sm-12 d-flex justify-content-center">
-					<img src="images/case-study/placea/placea-link-app.png" alt="Place Link" class="img-fluid placea-link-img">
+				<h4 class="text-center">Available on the App Store or get it on google play.</h4>
+			</div>
+			<div class="row pt-4">
+				<div class="col-sm-12 col-md-6 text-center">
+					<img src="images/case-study/placea/placea-app-store.png" class="img-fluid" alt="Placea App Store">
+				</div>
+				<div class="col-sm-12 col-md-6 text-center">
+					<img src="images/case-study/placea/placea-play-store.png" class="img-fluid" alt="Placea Play Store">
 				</div>
 			</div>
 		</div>
