--- a/portfolio.html
+++ b/portfolio.html
@@ -28,6 +28,17 @@
 	<div id="progress-bar"></div>
 	<!-- End Progress Bar -->
 
+	<!-- Start Preloader -->
+	<div class="onloadpage" id="page_loader">
+		<div class="pre-content">
+			<div class="logo-pre">
+				<img src="images/logo.png" alt="Logo" class="img-fluid" />
+			</div>
+			<div class="pre-text- text-radius text-light text-animation bg-b">Futurealiti - Ideas Into Reality</div>
+		</div>
+	</div>
+	<!-- End Preloader -->
+
 	<!-- Start Header -->
 	<header class="nav-bg-b main-header navfix fixed-top menu-white">
 		<div class="container-fluid m-pad">
@@ -221,7 +232,7 @@
 								</div>
 							</div>
 					 	</li>
-					   	<li> <a href="case-study.html" class="menu-links">Case Study</a> </li>
+					   	<li> <a href="portfolio.html" class="menu-links">Portfolio</a> </li>
 					   	<li> <a href="contact-us.html" class="menu-links">Contact Us</a> </li>
 					</ul>
 				<!-- mobile + desktop - sidebar menu- dark mode witch and button -->
@@ -341,7 +352,7 @@
 							</li>
 						</ul>
 					</li>
-					<li><a href="case-study.html">Case Study</a></li>
+					<li><a href="portfolio.html">Portoflio</a></li>
 					<li><a href="contact-us.html">Contact Us</a></li>
 				</ul>
 				<ul class="bottom-nav">
@@ -372,163 +383,165 @@
 		</div>
 	</header>
 	<!--End Header -->
-	
-	<!-- Start Breadcrumb Area -->
-	<section class="case-study">
-		<div class="container">
-			<div class="row justify-content-md-center">
-				<div class="col-lg-10 v-center" style="margin-top:10%">
-					<div id="axis" class="one">
-						<img src="images/case-study/rocco/character.png" alt="" height="80%" width="80%" class="object van move-right">
+
+	<!--Start Breadcrumb Area -->
+	<section class="breadcrumb-area banner-3">
+		<div class="text-block">
+			<div class="container">
+				<div class="row">
+			  		<div class="col-lg-12 v-center">
+						<div class="bread-inner">
+				  			<div class="bread-menu">
+								<ul>
+									<li><a href="index.html">Home</a></li>
+									<li><a href="#">Portfolio</a></li>
+								</ul>
+							</div>
+							<div class="bread-title">
+								<h2>Our Projects</h2>
+							</div>
+						</div>
 					</div>
 				</div>
 			</div>
 		</div>
-	</section>
+	  </section>
 	<!-- End Breadcrumb Area -->
-	
-	<!-- Start Chararter Section -->
-	<section class="characterDesign pt-5">
-		<div class="container">
-			<div class="row justify-content-md-center">
-				<div class="col-lg-5 col-12 col-md-12">
-					<h1 class="characterHeading">Character design concept</h1>
-					<p class="characterDescription">Designing a character from scratch can be a tricky beast to tackle. Here is how our team has taken up this challenge and designed a memorable character. Meet Rocco the Rhino – strong and hard-working, but not a superhero!</p>
-				</div>
-				<div class="col-lg-1"></div>
-				<div class="col-lg-3 col-6 col-md-6">
-					<img src="images/case-study/rocco/first-character.png" alt="" height="100%" width="100%">
-				</div>
-				<div class="col-lg-3 col-6 col-md-6">
-					<img src="images/case-study/rocco/second-character.png" alt="" height="100%" width="100%">
-				</div>
-			</div>
-		</div>
-		
-	</section>
 
-	<section class="characterDesign2 mt-3">
+	<!-- Start Portfolio -->
+	<section class="portfolio-page pad-tb">
 		<div class="container">
-			<div class="row">
-				<div class="col-lg-6 ">
-					<img src="images/case-study/rocco/third-character.png" alt="" height="100%" width="100%">
+			<div class="row justify-content-left">
+				<div class="col-lg-4">
+					<div class="common-heading pp">
+						<span>Our Work</span>
+						<h2>Portfolio</h2>
+					</div>
 				</div>
-				<div class="col-lg-6 my-auto">
-					<h1 class="characterHeading2">Who is Rocco the Rhino?</h1>
-					<p class="characterDescription2">Before we have started drawing a character, we have defined his mood, key traits, and features that we should communicate through a visual image. Rocco the Rhino has had to be strong and visually lightweight, confident and amiable at the same time. We believe that this mix of paradoxes will win the audience’s heart.</p>
+				<div class="col-lg-8 v-center">
+					<div class="filters">
+						<ul class="filter-menu">
+							<li data-filter="*" class="is-checked">All</li>
+							<li data-filter=".ar">AR</li>
+							<li data-filter=".game">Game</li>
+							<li data-filter=".vr">VR</li>
+							<li data-filter=".mobile">Mobile Apps</li>
+							<li data-filter=".website">Website</li>
+							<li data-filter=".design">Design</li>
+						</ul>
+					</div>
 				</div>
 			</div>
 		</div>
+		<div class="row card-list">
+			<div class="col-lg-12 col-md-12 grid-sizer"></div>
+			<div class="col-lg-12 col-sm-12 single-card-item ar">
+				<div class="pbwide shadow bg-gradient1">
+					<div class="portfolio-item-info-tt">
+						<div class="logowide mb20">
+							<img src="images/case-study/placea-logo.png" alt="logo" class="img-fluid">
+						</div>
+						<div class="widebloktag"><span>AR</span></div>
+						<h3 class="mt30 mb30 text-white">Placea Furniture Store</h3>
+						<ul class="info-list-ul">
+							<li>Product Strategy</li>
+							<li>Product UI/UX Design</li>
+							<li>Branding Design</li>
+							<li>Design System</li>
+						</ul>
+						<a href="placea-furniture-shop.html" class="btn-outline lnk mt30">View Case Study 
+							<i class="fas fa-chevron-right fa-icon"></i>
+							<span class="circle"></span>
+						</a>
+					</div>
+					<div class="portfolio-wide-image">
+						<div class="img-wide-blocktt tilt-outer">
+							<div class="innerwidedevice tilt-inner" data-tilt="" data-tilt-max="4" data-tilt-speed="1000" data-tilt-perspective="2000">
+								<div class="">
+									<img src="images/case-study/placea-app.png" alt="img" class="img-fluid">
+								</div>
+							</div>
+						</div>
+					</div>
+				</div>
+			</div>
+			<div class="col-lg-12 col-sm-12 single-card-item website">
+				<div class="pbwide shadow bg-gradient2">
+					<div class="portfolio-item-info-tt">
+						<div class="logowide mb20"><img src="images/client/customer-logo-3.png" alt="logo" class="img-fluid"></div>
+						<div class="widebloktag"><span>Design</span> <span>Coding</span> <span>Design</span> </div>
+						<h3 class="mt30 mb30">Weather &amp; Radar - Accurate Weather Forecast</h3>
+						<ul class="info-list-ul">
+							<li>Product Strategy</li>
+							<li>Product UI/UX Design</li>
+							<li>Branding Design</li>
+							<li>Design System</li>
+						</ul>
+						<a href="#" class="btn-outline lnk mt30">View Case Study  <i class="fas fa-chevron-right fa-icon"></i><span class="circle"></span></a>
+					</div>
+					<div class="portfolio-wide-image">
+						<div class="img-wide-blocktt tilt-outer">
+							<div class="innerwidedevice tilt-inner" data-tilt="" data-tilt-max="4" data-tilt-speed="1000" data-tilt-perspective="2000" style="will-change: transform; transform: perspective(2000px) rotateX(0deg) rotateY(0deg) scale3d(1, 1, 1);">
+								<div class="desktopblock shadow1"><img src="images/portfolio/portfolio-wide-2.jpg" alt="img" class="img-fluid"> </div>
+								<div class="mobileblock shadow1"><img src="images/portfolio/portfolio-wide-2a.jpg" alt="img" class="img-fluid"> </div>
+							</div>
+						</div>
+					</div>
+				</div>
+			</div>
+			<div class="col-lg-12 col-sm-12 single-card-item graphic">
+				<div class="pbwide shadow bg-gradient3">
+					<div class="portfolio-item-info-tt">
+						<div class="logowide mb20"><img src="images/client/customer-logo-7.png" alt="logo" class="img-fluid"></div>
+						<div class="widebloktag"><span>Design</span> <span>Coding</span> <span>Design</span> </div>
+						<h3 class="mt30 mb30">Weather &amp; Radar - Accurate Weather Forecast</h3>
+						<ul class="info-list-ul">
+							<li>Product Strategy</li>
+							<li>Product UI/UX Design</li>
+							<li>Branding Design</li>
+							<li>Design System</li>
+						</ul>
+						<a href="#" class="btn-outline lnk mt30">View Case Study  <i class="fas fa-chevron-right fa-icon"></i><span class="circle"></span></a>
+					</div>
+					<div class="portfolio-wide-image">
+						<div class="img-wide-blocktt tilt-outer">
+							<div class="innerwidedevice tilt-inner" data-tilt="" data-tilt-max="4" data-tilt-speed="1000" data-tilt-perspective="2000">
+								<div class="desktopblock shadow1"><img src="images/portfolio/portfolio-wide-3.jpg" alt="img" class="img-fluid"> </div>
+								<div class="mobileblock shadow1"><img src="images/portfolio/portfolio-wide-3a.jpg" alt="img" class="img-fluid"> </div>
+							</div>
+						</div>
+					</div>
+				</div>
+			</div>
+			<div class="col-lg-12 col-sm-12 single-card-item website">
+				<div class="pbwide shadow bg-gradient4">
+					<div class="portfolio-item-info-tt">
+						<div class="logowide mb20"><img src="images/client/customer-logo-5.png" alt="logo" class="img-fluid"></div>
+						<div class="widebloktag"><span>Design</span> <span>Coding</span> <span>Design</span> </div>
+						<h3 class="mt30 mb30">Weather &amp; Radar - Accurate Weather Forecast</h3>
+						<ul class="info-list-ul">
+							<li>Product Strategy</li>
+							<li>Product UI/UX Design</li>
+							<li>Branding Design</li>
+							<li>Design System</li>
+						</ul>
+						<a href="#" class="btn-outline lnk mt30">View Case Study  <i class="fas fa-chevron-right fa-icon"></i><span class="circle"></span></a>
+					</div>
+					<div class="portfolio-wide-image">
+						<div class="img-wide-blocktt tilt-outer">
+							<div class="innerwidedevice tilt-inner" data-tilt="" data-tilt-max="4" data-tilt-speed="1000" data-tilt-perspective="2000" style="will-change: transform; transform: perspective(2000px) rotateX(0deg) rotateY(0deg) scale3d(1, 1, 1);">
+								<div class="desktopblock shadow1"><img src="images/portfolio/portfolio-wide-4.jpg" alt="img" class="img-fluid"> </div>
+								<div class="mobileblock shadow1"><img src="images/portfolio/portfolio-wide-4a.jpg" alt="img" class="img-fluid"> </div>
+							</div>
+						</div>
+					</div>
+				</div>
+			</div>
+		</div>
+		</div>
 	</section>
+	<!-- End Portfolio -->
 
-	<section class="sketing mt-3">
-		<div class="container">
-			<div class="row">
-				<div class="col-lg-6 v-center">
-					<img src="images/case-study/rocco/fourth-character.png" alt="" height="100%" width="100%">
-				</div>
-				<div class="col-lg-6 my-auto">
-					<h1 class="characterHeading2 text-center" style="color: #fff;">The sketching stages</h1>
-					<p class="characterDescription3 text-center" style="color: #fff;">After we’ve defined Rocco’s personal features, we have started creating sketches with movement, acting, and fun. Our graphic design team believes that a key tool in character design is the line of action that helps create an efficient narrative and convey dynamics. That’s why we have captured the poses for Rocco the Rhino first, and after, revealed the direction of the character design.</p>
-				</div>
-			</div>
-		</div>
-	</section>
-	<!-- End Chararter Section -->
-
-	<!-- Start Chararter Section -->
-	<section class="characterImages py-5">
-		<div class="container">
-			<div class="row justify-content-md-center">
-				<div class="col-lg-2 col-6 col-md-4"> <img src="images/case-study/rocco/character-1.png" alt="" height="100%" width="100%"> </div>
-				<div class="col-lg-2 col-6 col-md-4"> <img src="images/case-study/rocco/character-2.png" alt="" height="100%" width="100%"> </div>
-				<div class="col-lg-2 col-6 col-md-4"> <img src="images/case-study/rocco/character-3.png" alt="" height="100%" width="100%"> </div>
-				<div class="col-lg-2 col-6 col-md-4"> <img src="images/case-study/rocco/character-4.png" alt="" height="100%" width="100%"> </div>
-				<div class="col-lg-2 col-6 col-md-4"> <img src="images/case-study/rocco/character-5.png" alt="" height="100%" width="100%"> </div>
-			</div>
-			<div class="row justify-content-md-center">
-				<div class="col-lg-2 col-6 col-md-4"> <img src="images/case-study/rocco/character-6.png" alt="" height="100%" width="100%"> </div>
-				<div class="col-lg-2 col-6 col-md-4"> <img src="images/case-study/rocco/character-7.png" alt="" height="100%" width="100%"> </div>
-				<div class="col-lg-2 col-6 col-md-4"> <img src="images/case-study/rocco/character-8.png" alt="" height="100%" width="100%"> </div>
-				<div class="col-lg-2 col-6 col-md-4"> <img src="images/case-study/rocco/character-9.png" alt="" height="100%" width="100%"> </div>
-				<div class="col-lg-2 col-6 col-md-4"> <img src="images/case-study/rocco/character-10.png" alt="" height="100%" width="100%"> </div>
-			</div>
-			<div class="row justify-content-md-center">
-				<div class="col-lg-3 col-6 col-md-4"> <img src="images/case-study/rocco/character-11.png" alt="" height="100%" width="100%"> </div>
-				<div class="col-lg-3 col-6 col-md-4"> <img src="images/case-study/rocco/character-12.png" alt="" height="100%" width="100%"> </div>
-				<div class="col-lg-3 col-6 col-md-4"> <img src="images/case-study/rocco/character-13.png" alt="" height="100%" width="100%"> </div>
-			</div>
-		</div>
-	</section>
-	<!-- End Chararter Section -->
-
-	<!-- character description section start -->
-	<section class="container py-5">
-		<div class="row justify-content-md-center">
-			<div class="col-lg-7 text-center ">
-				<p class="characterDescription4">It has been a long way. But, we have passed it fast. To understand Rocco the Rhino’s emotion and see a line of action, we have turned him into a silhouette to check if we need to make his gestures more distinctive.</p>
-			</div>
-		</div>
-	</section>
-	<!-- character description section end -->
-	<!-- character large image section start -->
-	<section class="container">
-		<div class="row justify-content-md-center">
-			<div class="col-lg-7"> <img src="images/case-study/rocco/characters.png" alt="" height="100%" width="100%"> </div>
-		</div>
-	</section>
-	<section class="py-5 characterConcept">
-		<div class="container-fluid">
-			<div class="row justify-content-md-center">
-				<div class="col-lg-3">
-					<img src="images/case-study/rocco/concept-2.png" alt="" height="100%" width="100%">
-				</div>
-				<div class="col-lg-5 text-center my-auto">
-					<h3 class="characterHeading5 text-white">CONCEPT</h3>
-					<p class="characterDescription5 text-white">It has been a long way. But, we have passed it fast. To understand Rocco the Rhino’s emotion and see a line of action, we have turned him into a silhouette to check if we need to make his gestures more distinctive.</p>
-				</div>
-				<div class="col-lg-3">
-					<img src="images/case-study/rocco/concept-1.png" alt="" height="100%" width="100%">
-				</div>
-			</div>
-		</div>
-	</section>
-	<!-- character description section end -->
-	<!-- about character section start -->
-	<section class="container py-5">
-		<div class="row justify-content-md-center">
-			<div class="col-lg-6">
-				<img src="images/case-study/rocco/about-1.png" alt="" class="img-fluid">
-			</div>
-			<div class="col-lg-6 my-auto">
-				<h3 class="characterHeadingAbout">It has been a long way. But, we have passed it fast. To understand Rocco the .</h3>
-				<p class="characterDescriptionAbout">It has been a long way. But, we have passed it fast. To understand Rocco the Rhino’s emotion and see a line of action, we have turned him into a silhouette to check if we need to make his gestures more distinctive.</p>
-			</div>
-		</div>
-		<div class="row justify-content-md-center">
-			<div class="col-lg-5" style="margin-top: 100px;">
-				<img src="images/case-study/rocco/about-2.png" alt="" class="img-fluid">
-				<p class="characterDescriptionAbout2">It has been a long way. But, we have passed it fast. To understand Rocco the Rhino’s emotion and see a line of </p>
-			</div>
-			<div class="col-lg-2"></div>
-			<div class="col-lg-5" style="margin-top: 100px;">
-				<img src="images/case-study/rocco/about-3.png" alt="" class="img-fluid">
-				<p class="characterDescriptionAbout2">It has been a long way. But, we have passed it fast. To understand Rocco the Rhino’s emotion and see a line of.</p>
-			</div>
-		</div>
-		<div class="row justify-content-md-center" style="margin-bottom: 100px">
-			<div class="col-lg-5" style="margin-top: 100px;">
-				<img src="images/case-study/rocco/about-4.png" alt="" class="img-fluid">
-				<p class="characterDescriptionAbout2">It has been a long way. But, we have passed it fast. To understand Rocco the Rhino’s emotion and see a line of </p>
-			</div>
-			<div class="col-lg-2"></div>
-			<div class="col-lg-5" style="margin-top: 100px;">
-				<img src="images/case-study/rocco/about-5.png" alt="" height="100%" width="100%">
-				<p class="characterDescriptionAbout2">It has been a long way. But, we have passed it fast. To understand Rocco the Rhino’s emotion and see a line of.</p>
-			</div>
-		</div>
-	</section>
-	<!-- about character section end -->
 	<!-- Start Footer -->
 	<footer>
 		<div class="footer-row2">
@@ -722,7 +735,14 @@
 	<script src="js/jquery.min.js"></script>
 	<script src="js/bootstrap.bundle.min.js"></script>
 	<script src="js/plugin.min.js"></script>
+	<script src="js/preloader.js"></script>
 	<script src="js/dark-mode.js"></script>
+	<script src="js/progress-bar.js"></script>
+	<script src='js/scroll-out.min.js'></script>
+	<script src='js/isotope.pkgd.min.js'></script>
+	<script src="js/masonry.pkgd.min.js"></script>
+	<script src="js/owl.carousel.js"></script>
+	<script src="js/owl.navigation.js"></script>
 	<!--common script file-->
 	<script src="js/main.js"></script>
 </body>
